--- a/Projeto5_Aula_12-09-2024_Adilson/web/index.html
+++ b/Projeto5_Aula_12-09-2024_Adilson/web/index.html
@@ -5,11 +5,17 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Loja - login</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <form name="frmlogin" method ="post" action="login.jsp">
+            Login <input type="text" name="login"><p>
+            Senha <input type="password" name="pw"><p>
+                <input type="submit" name="logar">    
+            
+            
+        </form>
     </body>
 </html>
