Adiciona lições em Java

--- a/Projeto8_Pesquisa/web/index.html
+++ b/Projeto8_Pesquisa/web/index.html
@@ -10,7 +10,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
-        <a href="pesquisa/index_pesquisa.html">Aqui</a>
+        <div></div>
+        <h2>Responda a pesquisa de satisfação</h2>
+        <p>Clique <a href="pesquisa/index_pesquisa.html">Aqui</a> para responder as questões</p>
     </body>
 </html>
