--- a/Projeto9_Gradiente/web/cadastro/indexCadastro.html
+++ b/Projeto9_Gradiente/web/cadastro/indexCadastro.html
@@ -16,7 +16,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
             
             Nome: <input type="text" name="nome" maxlength="150" placeholder="Nome completo" required><p>
             E-mail: <input type="email" name="email" maxlength="100" placeholder="E-mail" required><p>
-            Data de nascimento: <input type="date" name="nasc" required><p> 
+            Data de nascimento: <input type="datetime-local" name="nasc" required><p> 
                 
                 <input type="reset" name="Limpar">
                 <input type="submit" name="Enviar">
