Adiciona lições em Java

--- a/Projeto8_Pesquisa/web/index.html
+++ b/Projeto8_Pesquisa/web/index.html
@@ -11,7 +11,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
     </head>
     <body>
         <div></div>
-        <h2>Responda a pesquisa de satisfação</h2>
-        <p>Clique <a href="pesquisa/index_pesquisa.html">Aqui</a> para responder as questões</p>
+        <h2>Responda a pesquisa de satisfação</h2><br>
+        <p>Clique <a href="pesquisa/index_pesquisa.html">aqui</a> para responder as questões</p>
+        <p>Consulta pela identificação <a href="consulta/consulta.html">aqui</a></p>
+        <p>Consulta todos os dados <a href="consulta/consultaidlista.jsp">aqui</a></p>
+        <p>Consulta todos os dados <a href="consulta/consultaidlistaLinha.jsp">aqui</a></p>
+        <p>Excluir por ID <a href="excluir/excluir.html">aqui</a></p>
     </body>
 </html>
